[gd_scene load_steps=2 format=3 uid="uid://cmosvqv8um3ac"]

[ext_resource type="Script" uid="uid://81i5r1fno8gd" path="res://Scenes/menu.gd" id="1_1rerr"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1rerr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "CookedTSE"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Lobby                            "

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Add Player"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Remove Player"

[node name="PlayerList" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PlayerList"]
layout_mode = 2
text = "- Player 1: Not Joined"

[node name="Label2" type="Label" parent="VBoxContainer/PlayerList"]
layout_mode = 2
text = "- Player 2: Not Joined"

[node name="Label3" type="Label" parent="VBoxContainer/PlayerList"]
layout_mode = 2
text = "- Player 3: Not Joined"

[node name="Label4" type="Label" parent="VBoxContainer/PlayerList"]
layout_mode = 2
text = "- Player 4: Not Joined"

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_add_player_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_remove_player_pressed"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
